--- a/.github/workflows/azure-terraform-ci.yml
+++ b/.github/workflows/azure-terraform-ci.yml
@@ -1,48 +1,66 @@
 name: Azure Terraform CI
 
 on:
+  pull_request:
+    paths:
+      - 'azure/**'
+      - '.github/workflows/azure-terraform-ci.yml'
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths:
+      - 'azure/**'
+      - '.github/workflows/azure-terraform-ci.yml'
+
+permissions:
+  contents: read
 
 jobs:
   terraform:
+    name: terraform fmt/init/validate
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.7.5
 
-      - name: Terraform fmt
-        run: terraform fmt -recursive -check
+      - name: Terraform fmt (recursive)
+        run: terraform -chdir=azure fmt -check -recursive
 
-      - name: Terraform init
-        run: terraform init -backend=false
+      - name: Terraform init (no backend)
+        run: terraform -chdir=azure init -backend=false -upgrade
 
       - name: Terraform validate
-        run: terraform validate
-
-      - name: Install tflint
-        run: |
-          curl -s https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
-
-      - name: Run tflint
-        run: tflint --recursive
+        run: terraform -chdir=azure validate
 
   shellcheck:
+    name: shellcheck (azure/*.sh)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install shellcheck
-        run: sudo apt-get update && sudo apt-get install -y shellcheck
-
       - name: Run shellcheck
+        shell: bash
         run: |
-          find . -type f -name "*.sh" -print0 | xargs -0 -I{} bash -lc 'shellcheck {} || exit 1'
+          set -euo pipefail
+          if command -v shellcheck >/dev/null 2>&1; then
+            true
+          else
+            sudo apt-get update -y
+            sudo apt-get install -y shellcheck
+          fi
+          # Only check scripts under azure/; don't fail the build on style warnings initially
+          mapfile -t files < <(git ls-files 'azure/**/*.sh' 'azure/*.sh' || true)
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "No shell scripts to lint."
+            exit 0
+          fi
+          echo "Linting ${#files[@]} shell scripts with shellcheck..."
+          # Exclude common CI false-positives; treat findings as warnings for now
+          set +e
+          shellcheck -S style --exclude=SC1091,SC2155,SC2086,SC2046 "${files[@]}"
+          exit 0
+
+
